src/test/ui/feature-gates/feature-gate-const_generics-ptr.stderr
warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/feature-gate-const_generics-ptr.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0658]: using function pointers as const generic parameters is unstable
  --> $DIR/feature-gate-const_generics-ptr.rs:4:25
   |
LL | struct ConstFn<const F: fn()>;
   |                         ^^^^
   |
   = note: see issue #53020 <https://github.com/rust-lang/rust/issues/53020> for more information
   = help: add `#![feature(const_compare_raw_pointers)]` to the crate attributes to enable

error[E0658]: using raw pointers as const generic parameters is unstable
  --> $DIR/feature-gate-const_generics-ptr.rs:7:26
   |
LL | struct ConstPtr<const P: *const u32>;
   |                          ^^^^^^^^^^
   |
   = note: see issue #53020 <https://github.com/rust-lang/rust/issues/53020> for more information
   = help: add `#![feature(const_compare_raw_pointers)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
